// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionGroupHeader renders properly 1`] = `
.c0 {
  box-sizing: border-box;
  position: absolute;
  height: 40px;
  padding-left: 16px;
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c0 h4 {
  font-size: 12px;
  text-transform: uppercase;
  line-height: 18px;
  text-align: left;
  margin: 0;
  color: var(--colorsUtilityYin055);
}

.c0 .c1 {
  margin-right: 4px;
  margin-left: -5px;
  color: var(--colorsUtilityYin055);
}

.c0 .c1:hover {
  color: var(--colorsUtilityYin055);
}

<div
  className="c0"
  id="guid-12345"
>
  <h4>
    Heading
  </h4>
</div>
`;

exports[`OptionGroupHeader when icon prop is set then it should display the icon 1`] = `
.c2 {
  position: relative;
  color: var(--colorsYin090);
  background-color: transparent;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 24px;
  width: 24px;
}

.c2::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e93c";
  font-style: normal;
  font-weight: normal;
  vertical-align: middle;
  font-size: var(--sizing250);
  line-height: var(--sizing250);
  display: block;
}

.c0 {
  box-sizing: border-box;
  position: absolute;
  height: 40px;
  padding-left: 16px;
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c0 h4 {
  font-size: 12px;
  text-transform: uppercase;
  line-height: 18px;
  text-align: left;
  margin: 0;
  color: var(--colorsUtilityYin055);
}

.c0 .c1 {
  margin-right: 4px;
  margin-left: -5px;
  color: var(--colorsUtilityYin055);
}

.c0 .c1:hover {
  color: var(--colorsUtilityYin055);
}

<div
  className="c0"
  id="guid-12345"
>
  <span
    className="c1 c2"
    data-component="icon"
    data-element="individual"
    fontSize="small"
    type="individual"
  />
  <h4>
    Heading
  </h4>
</div>
`;
